--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 </head>
 <body>
     <form action="" id="myForm">
-        name: <input type="text" id="name"> <span id="nameerror">Name should be 5 characters or more</span> <br>
-        email   <input type="text" id="email"> <span id="emailerror">Enter valid email</span> <br>
-        password: <input type="password" id="password"> <span id="passerror"></span> <br>
+        name: <input type="text" id="name"> <br>
+        email   <input type="text" id="email"> <br>
+        password: <input type="password" id="password"> <br>
         confirm password: <input type="password" id="confirm_password"> <br>
         <input type="submit">
     </form>
